<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_general"
            android:contentDescription="@string/login_logo_content_description"
            android:src="@drawable/ic_logo_main"
            app:layout_constraintBottom_toTopOf="@id/usernameInputEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@id/passwordInputEditText"
            app:layout_constraintEnd_toEndOf="@+id/loginLogo"
            app:layout_constraintStart_toStartOf="@+id/loginLogo"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                android:paddingStart="@dimen/margin_sm"
                android:paddingEnd="@dimen/margin_sm"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/label_textsize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/usernameInputEditText"
            app:layout_constraintStart_toStartOf="@+id/usernameInputEditText"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingStart="@dimen/margin_sm"
                android:paddingEnd="@dimen/margin_sm"
                android:inputType="textPassword"
                android:textSize="@dimen/label_textsize" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"
            style="@style/EZButton"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/signUpTextView"
            app:layout_constraintEnd_toEndOf="@+id/passwordInputEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordInputEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputEditText" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            android:text="@string/signup"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>