...
        android:id="@+id/loginFragment"
        android:name="com.prashant.naik.ezcart.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login"
        android:label="Login" >
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
...
